--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index3.html">Jumble Helper</a>
+                    <a href="index.html">Jumble Helper</a>
                 </li>
                 <li class="active">
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
 
                
