--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About</title>
+    <title>AboutMe</title>
 
     <!-- Bootstrap Core CSS -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
                     <a href="index.html">Jumble Helper</a>
                 </li>
                 <li class="active">
-                    <a href="about.html">About</a>
+                    <a href="about.html">About Me</a>
                 </li>
 
                
@@ -55,9 +55,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>About Me</h1>
-                        <p>I am an Android Developer with 0-6 months of experience, and I am available for job.</p>
+                        <p>I am an Android Devloper with 6 month experience and looking for job opportunities in Mumbai,India</p>
                         <p>Previously, I used to teach various subjects to engineering students at Govt. Engineering College, Bhavnagar</p>
-                        
+                        <p>e-mail:janki.ce [at] gmail [dot] com</p>
                     </div>
                 </div>
             </div>
