--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="index3.html">Jumble Helper</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="about.html">AboutMe</a>
                 </li>
 
                 
