changing email id

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                         <h1>About Me</h1>
                         <p>I am an Android Devloper with 6 month experience and looking for job opportunities in Mumbai,India</p>
                         <p>Previously, I used to teach various subjects to engineering students at Govt. Engineering College, Bhavnagar</p>
-                        <p>E-mail: <a href="mailto:janki.ce@gmail.com">janki.ce [at] gmail [dot] com</a></p>
+                        <p>E-mail: <a href="mailto:janki.j.gandhi@gmail.com">janki.j.gandhi [at] gmail.com</a></p>
                     </div>
                 </div>
             </div>
