--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="index3.html">Jumble Helper</a>
+                    <a href="index.html">Jumble Helper</a>
                 </li>
                 <li>
-                    <a href="about.html">AboutMe</a>
+                    <a href="about.html">About Me</a>
                 </li>
 
                 
